Code Cleanup by Intellij #8893